<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".LoginActivity">

    <!-- Logo and WorkBridge Text -->
    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/logowb" />

    <!-- Buttons for Applicant and Employer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_applicant"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/applicant"
            android:background="@drawable/for_btn"
            android:textColor="@color/black"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btn_employer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/employer"
            android:background="@drawable/for_btn"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <!-- Email and Password Fields -->
    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorTextLight"
        android:textColor="#ffff"
        android:backgroundTint="@color/colorTextLight"
        android:padding="16dp"
        android:maxWidth="300dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/colorTextLight"
        android:textColor="#ffff"
        android:backgroundTint="@color/colorTextLight"
        android:padding="16dp"
        android:maxWidth="300dp" />

    <!-- Forgot Password and Login Button -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:maxWidth="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <!-- Sign Up Link -->
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:paddingTop="16dp" />
</LinearLayout>
